[package]
name = "npack"
version = "0.0.2"
edition = "2021"
description = "Use the right package manager"
authors = ["fangyuan.leslie@gmail.com"]
keywords = ["ni", "npm", "yarn", "pnpm", "bun"]
license = "MIT"
homepage = "https://github.com/zhazhazhu/ni"
repository = "https://github.com/zhazhazhu/ni"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ni"
path = "src/bin/ni.rs"
[[bin]]
name = "nr"
path = "src/bin/nr.rs"
[[bin]]
name = "nun"
path = "src/bin/nun.rs"
[[bin]]
name = "nlx"
path = "src/bin/nlx.rs"
[[bin]]
name = "nu"
path = "src/bin/nu.rs"

[dependencies]
console = "0.15.7"
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "completion"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
which = "5.0.0"
